Online-Offline mode working(Console output message)

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -11,7 +11,7 @@
   </ion-list>
     <div class="spacer" style="height: 40px;"></div>
     <button id="login-button1" class="button button-stable  button-block" ng-click="login(username,password)">Log in</button>
-    <button href="#/signup" id="login-button2" style="color:#14278F;" class="button button-stable  button-block button-clear">Or create an account</button>
+    <button ui-sref="signup" id="login-button2" style="color:#14278F;" class="button button-stable  button-block button-clear">Or create an account</button>
   </form>
 </ion-content>
 </ion-view>
