--- a/www/templates/checkStatus.html
+++ b/www/templates/checkStatus.html
@@ -2,11 +2,16 @@
 <ion-content overflow-scroll="true" padding="true" class="has-header">
   <div class="card">
     <div class="item item-text-wrap">
-      <h1 ng-model="network">Network: {{type}}</h1>
+      <h1 ng-model="networkType">Network: {{networkType}}</h1>
     </div>
   </div>
-  <div>Online state={{onlineStatus}}</div>
-  <div>Offline state={{offlineStatus}}</div>
+  <div>Online state : {{onlineStatus}}</div>
+  <div>Offline state : {{offlineStatus}}</div>
+
+  <div>Rootscope Online state={{isOnline}}</div>
+  <div>Rootscope Offline state={{isOffline}}</div>
+  <h1 ng-model="network">Network: {{network}}</h1>
+
  <!-- <div ng-show="! isOnline">Offline state</div>
   
 
