--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -3,16 +3,16 @@
     <form class="list">
       <ion-list>
         <label class="item item-input">
-          <span class="input-label">Name</span>
           <input type="text" placeholder="Name" ng-model="data.name">
         </label>
         <label class="item item-input">
-          <span class="input-label">Username</span>
           <input type="text" placeholder="Username" ng-model="data.username">
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="text" placeholder="Password" ng-model="data.password">
+          <input type="password" placeholder="Password" ng-model="data.password">
+        </label>
+        <label class="item item-input">
+          <input type="password" placeholder="Confirm Password" ng-model="data.password_confirmation">
         </label>
       </ion-list>
       <button id="signup-button3" class="button button-stable button-block" ng-click="signup(data)">Sign up</button>
