--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,7 +1,26 @@
 <ion-view title="Contacts">
 <ion-content overflow-scroll="true" padding="true" class="has-header">
-
-  <div id="contacts" ng-model="contacts">{{contacts}}</div>
+	<div class="padding">
+          <button class="button" ng-click="getContacts()">Get My Contacts</button>
+          <div class="list" ng-show="phoneContacts">
+            <div class="card" ng-repeat="contact in phoneContacts">
+              <div class="item item-divider">
+                {{ contact.name.formatted }}
+              </div>
+              <div class="item item-text-wrap">
+                <p><strong>Phone(s)</strong></p>
+                <div ng-repeat="number in contact.phoneNumbers">
+                  <p>{{ number.value }}</p>
+                </div>
+                <p><strong>Email(s)</strong></p>
+                <div ng-repeat="email in contact.emails">
+                  <p>{{ email.value }}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  <!--<div id="contacts" ng-model="contacts">{{contacts}}</div>-->
   
 </ion-content>
 </ion-view>
