Facebook login code added(not working yet)

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,6 +12,7 @@
     <div class="spacer" style="height: 40px;"></div>
     <button id="login-button1" class="button button-stable  button-block" ng-click="login(username,password)">Log in</button>
     <button ui-sref="signup" id="login-button2" style="color:#14278F;" class="button button-stable  button-block button-clear">Or create an account</button>
+    <button id="" class="button button-stable  button-block" ng-click="facebookSignIn()">Login with facebook</button>
   </form>
 </ion-content>
 </ion-view>
